objects/Chip_Detail__c.object
<CustomObject>
    <fields>
        <fullName>AntiClockWiseRotation__c</fullName>
        <description>Stores the AntiClockWiseRotation</description>
        <label>AntiClockWiseRotation-obsoleted</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Anti_Clockwise_Rotation_degrees__c</fullName>
        <label>Anti_Clockwise_Rotation_degrees</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>90</fullName>
                </value>
                <value>
                    <fullName>180</fullName>
                </value>
                <value>
                    <fullName>270</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Bump__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Stores whether chip is bump</description>
        <label>Bump</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Chip_Size_X__c</fullName>
        <description>X dimension</description>
        <label>Chip Size_X-obsoleted</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Chip_Size_Y__c</fullName>
        <description>Y dimension</description>
        <label>Chip Size Y-obsoleted</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EBeamShrink__c</fullName>
        <description>Stores the EBeamShrink</description>
        <label>EBeamShrink</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FileDirectory__c</fullName>
        <description>Stores the FileDirectory</description>
        <label>FileDirectory</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FileName__c</fullName>
        <description>Stores the FileName</description>
        <label>FileName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FileSource__c</fullName>
        <description>Stores the FileSource</description>
        <label>FileSource</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FileTimestamp__c</fullName>
        <description>Stores the FileTimestamp</description>
        <label>FileTimestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>FoundrytoAddCrackstop__c</fullName>
        <description>Stores the FoundrytoAddCrackstop</description>
        <label>FoundrytoAddCrackstop</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FoundrytoAddGuarding__c</fullName>
        <description>Stores the FoundrytoAddGuarding</description>
        <label>FoundrytoAddGuarding</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsCancelled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsCancelled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Legacy_RecordType__c</fullName>
        <label>Legacy RecordType</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MergedDatabaseFileDirectory__c</fullName>
        <description>Stores the MergedDatabaseFileDirectory</description>
        <label>MergedDatabaseFileDirectory</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>MergedDatabaseFileName__c</fullName>
        <description>Stores the MergedDatabaseFileName</description>
        <label>MergedDatabaseFileName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MergedDatabaseFileSize__c</fullName>
        <description>Stores the MergedDatabaseFileSize</description>
        <label>MergedDatabaseFileSize</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MergedDatabaseFileTimestamp__c</fullName>
        <description>Stores the MergedDatabaseFileTimestamp</description>
        <label>MergedDatabaseFileTimestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>PTRF_Frame_Tapeout__c</fullName>
        <description>Frame Tapeout of PTRF associated</description>
        <formula>PTRF__r.Frame_Tapeout__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PTRF Frame Tapeout</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PTRF_Order_Status__c</fullName>
        <description>Order status of PTRF associated</description>
        <formula>TEXT(PTRF__r.Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PTRF Order Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PTRF_Prime_Tapeout__c</fullName>
        <description>Prime Tapeout of PTRF associated</description>
        <formula>PTRF__r.Prime_Tapeout__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PTRF Prime Tapeout</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PTRF__c</fullName>
        <description>PTRF associated to the chip</description>
        <label>PTRF</label>
        <referenceTo>PTRF__c</referenceTo>
        <relationshipLabel>Chip Details</relationshipLabel>
        <relationshipName>Chip_Details</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>PreDSDPAntiClockwiseRotationDRTPKId__c</fullName>
        <description>Stores the PreDSDPAntiClockwiseRotationDRTPKId</description>
        <label>PreDSDPAntiClockwiseRotationDRTPKId</label>
        <precision>13</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SN__c</fullName>
        <description>Stores the SN value</description>
        <label>SN</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Size_X_um__c</fullName>
        <label>Size_X_um</label>
        <precision>13</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Size_Y_um__c</fullName>
        <label>Size_Y_um</label>
        <precision>13</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tapeout__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Stores whether chip has been tapeout</description>
        <label>Tapeout</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Top_Cell_Name__c</fullName>
        <label>Top Cell Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TransferFileSize__c</fullName>
        <description>Stores the TransferFileSize</description>
        <label>TransferFileSize</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UncompressedFileSize__c</fullName>
        <description>Stores the UncompressedFileSize</description>
        <label>UncompressedFileSize</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WCLowerLeft_X__c</fullName>
        <description>Stores the WCLowerLeft_X</description>
        <label>WCLowerLeft_X</label>
        <precision>13</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WCLowerLeft_Y__c</fullName>
        <description>Stores the WCLowerLeft_Y</description>
        <label>WCLowerLeft_Y</label>
        <precision>13</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WCUpperRight_X__c</fullName>
        <description>Stores the WCUpperRight_X</description>
        <label>WCUpperRight_X</label>
        <precision>13</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WCUpperRight_Y__c</fullName>
        <description>Stores the WCUpperRight_Y</description>
        <label>WCUpperRight_Y</label>
        <precision>13</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>chipDetailUniqueIdentifier__c</fullName>
        <label>chipDetailUniqueIdentifier</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Chip Detail</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Chip Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Chip Details</pluralLabel>
    <recordTypes>
        <fullName>Prime_Die</fullName>
        <active>true</active>
        <description>This record type is for the chip type Prime Dies</description>
        <label>Prime Die</label>
    </recordTypes>
    <recordTypes>
        <fullName>Scribeline_Dropins</fullName>
        <active>true</active>
        <description>This record type is for the chip type Scribeline Dropins</description>
        <label>Scribeline Dropins</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>